--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow: hidden; /* Evita el desplazamiento global */
 }
 
 .video-container {
@@ -27,10 +28,12 @@ body, html {
     transform: translate(-50%, -50%);
     width: 90%;
     max-width: 600px; /* Limita el ancho en pantallas grandes */
+    height: auto; /* Ajusta la altura al contenido */
+    max-height: 90%; /* Limita la altura para no ocupar toda la pantalla */
     background-color: rgba(115, 124, 141, 0.6); /* Ajusta el fondo para mejor visibilidad */
     border-radius: 10px; /* Reduces el radio para dispositivos móviles */
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-    overflow: auto;
+    overflow: auto; /* Permite el desplazamiento interno */
     padding: 15px;
     box-sizing: border-box; /* Asegura que el padding se incluya en el ancho total */
 }
